--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@types/node": "16.11.7",
     "@types/react": "17.0.34",
     "autoprefixer": "^10.4.0",
-    "eslint": "7.32.0",
+    "eslint": "^7.32.0",
     "eslint-config-next": "12.0.3",
     "eslint-config-prettier": "^8.3.0",
     "postcss": "^8.3.11",
