--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "devDependencies": {
     "@types/node": "16.11.7",
     "@types/react": "17.0.34",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
     "autoprefixer": "^10.4.0",
     "eslint": "^7.32.0",
+    "eslint-config-google": "^0.14.0",
     "eslint-config-next": "12.0.3",
     "eslint-config-prettier": "^8.3.0",
     "postcss": "^8.3.11",
