--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "check-types": "tsc --pretty --noEmit",
+    "check-format": "prettier --check .",
+    "format": "prettier --write .",
+    "check-all": "npm run check-format && npm run lint && npm run check-types",
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "12.0.3",
@@ -21,6 +26,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-config-next": "12.0.3",
     "eslint-config-prettier": "^8.3.0",
+    "husky": "^7.0.0",
     "postcss": "^8.3.11",
     "prettier": "2.4.1",
     "tailwindcss": "^2.2.19",
